--- a/ao/css/post.css
+++ b/ao/css/post.css
@@ -134,6 +134,8 @@ article.post footer.post .menu ul.dropit-submenu {
     background-color: #FFFFFF;
     border: 1px solid #B2B2B2;
     margin: -30px 0px 0px 55px;
+    max-height: 150px;
+    max-width: 180px;
     padding: 6px 0;
     -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
@@ -142,7 +144,9 @@ article.post footer.post .menu ul.dropit-submenu {
        -moz-box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
             box-shadow: 0px 1px 3px rgba(0,0,0,0.15);
     list-style: none outside none;
+    overflow: auto;
     position: absolute;
+    width: 180px;
 }
      
 article.post footer.post .menu ul.dropit-submenu li a.tag {
