--- a/ao/css/post.css
+++ b/ao/css/post.css
@@ -105,25 +105,35 @@ article.post footer.post .menu {
     list-style: none outside none;
 }
 
+article.post footer.post .menu a.tag_trigger {
+    background-image: url("img/tag.png");
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: 15px 15px;
+    margin-left: 50px;
+    padding-left: 15px;
+}
+
 article.post footer.post .menu a.close_list {
+    background-color: #FFFFFF;
+    border-color: #B2B2B2;
+    border-style: solid;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-width: 1px;
     color: #7A868E;
     display: none;
-    background-color: #FFFFFF;
-    border-color: #B2B2B2 #FFFFFF #B2B2B2 #B2B2B2;
-    border-style: solid;
-    border-width: 1px;
-    border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px;
-    margin-left: 5px;
-    padding-left: 7px;
-    padding-right: 8px;
+    margin-left: -50px;
+    margin-top: -5px;
+    padding: 5px 25px;
     position: absolute;
     text-decoration: none;
-    z-index: 1;
 }
 
 article.post footer.post .menu a.close_list:hover {
-    color: #000000;
+    background: #17B0E9;
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
 article.post footer.post .menu ul {
@@ -133,7 +143,7 @@ article.post footer.post .menu ul {
 article.post footer.post .menu ul.dropit-submenu {
     background-color: #FFFFFF;
     border: 1px solid #B2B2B2;
-    margin: -30px 0px 0px 55px;
+    margin: 20px 0 0 -160px;
     max-height: 150px;
     max-width: 180px;
     padding: 6px 0;
@@ -147,6 +157,7 @@ article.post footer.post .menu ul.dropit-submenu {
     overflow: auto;
     position: absolute;
     width: 180px;
+    z-index: 1;
 }
      
 article.post footer.post .menu ul.dropit-submenu li a.tag {
@@ -181,7 +192,7 @@ article.post .share_facebook {
     margin-right: 5px;
     opacity: 0.75;
     height: 30px;
-    width: 100px;
+    width: 110px;
 }
 
 article.post .share_facebook:hover {
